--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
       <li class="nav-item">
         <a routerLink="add" class="nav-link">Add</a>
       </li>
+      <li class="nav-item">
+        <a routerLink="other" class="nav-link">Other Service</a>
+      </li>
     </div>
   </nav>
 
